# GridDesigner

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  zzGridExample.c
lib/: CMakeLists.txt
lib/include/GridDesigner/: SvgRenderer.h  ZigZagGrid.h  ZigZagGrid.md
lib/src/: ZigZagGrid.c  ZigZagGridSvgRenderer.c
tests/: CMakeLists.txt  assertNoMemoryLeaks.sh  zzGridTest.c
